Changes for 1.6.5

 - [ZBX-927] removed default values for text and blob fields in the upgrade script for compatibility with MySQL 5.0 (Sasha)
 - [ZBX-719] fixed typo in default graph title (Richlv)
 - [ZBX-859] fixed typo in server log message (Richlv)
 - [ZBX-848] fixed typos in changelog and comments (Richlv)
 - [ZBX-926] fixed exporting after preview (Artem)
 - [ZBX-925] fixed verification of IPv6 adresses in frontend (Sasha)
 - [ZBX-918, ZBX-919] fixed compilation errors for 'unknown' platforms (Alexei)
 - [ZBX-922] fixed selection proper hosts for hosts-groups assign (Artem)
 - [ZBX-559] fixed wrong format of input file in help info of zabbix_sender (Alexei)
 - [DEV-381] added printing of SVN revision number to all binaries (Alexei)
 - [ZBX-914] fixed SQL error while updating configuration tables on the proxy side (Sasha)
 - [ZBX-910] Queue/Details screen now has "Delayed at" column (Sasha)
 - [ZBX-910] Queue/Details screen now displays only 500 records (Sasha)
 - [ZBX-910] fixed incorrect values for proxy items in the Queue in case of time difference between server and the proxy (Sasha)
 - [ZBX-885] removed unused test code from Zabbix agent (Alexei)
 - [ZBX-887] fixed typo in "Not accessible resources" (Alexei)
 - [DEV-329] fixed server crash if PostgreSQL transaction fails (Sasha)
 - [ZBX-902] fixed wrongly updated operation in action in several circumstances (Artem)
 - [ZBX-779] removed PostgreSQL warning message "nonstandard use of ..." (Sasha)
 - [ZBX-901] fixed possible bug on trigger creation (Artem)
 - [ZBX-900] fixed adding several user to group with Oracle DB (Artem)
 - [ZBX-894] fixed processing of {HOSTNAME} for trigger name if the trigger expression consists of several items (Sasha)
 - [ZBX-894] fixed processing of {ITEM.NAME},{HOSTNAME},{IPADDRESS} and {TRIGGER.KEY} for alerts if the trigger expression consists of several items (Sasha)
 - [ZBX-897] fixed user groups rights adding for host groups (Vedmak)